[package]
name = "moon"
version = "0.1.0"
authors = ["notsoclassy <notsoclassy357@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "moonlib"
path = "src/lib.rs"

[[bin]]
name = "moon"
path = "src/main.rs"

[dependencies]
libc = "0.2"